# cpp-hdl

./: .gitignore  CMakeLists.txt  arena.h  ast.cpp  ast.h  big_integer.h  bit_vector.h  main.cpp  meson.build  output_generator.cpp  output_generator.h  parse_error.cpp  parse_error.h  parser.cpp  parser.h  source.cpp  source.h  string_view.h  test.cpphdl  tokenizer.cpp  tokenizer.h  verilog_output_generator.cpp  verilog_output_generator.h
ast/: CMakeLists.txt  assignment_expression.cpp  assignment_expression.h  ast.h  ast_macros.h  binary_expression.cpp  binary_expression.h  bit_vector_type.cpp  bit_vector_type.h  bit_vector_type_forward.h  block_statement.cpp  block_statement.h  break_statement.cpp  break_statement.h  bundle.cpp  bundle.h  cast_expression.cpp  cast_expression.h  cat_expression.cpp  cat_expression.h  comment.cpp  comment.h  conditional_expression.cpp  conditional_expression.h  connect_expression.cpp  connect_expression.h  const_statement.cpp  const_statement.h  const_statement_part.cpp  const_statement_part.h  context.h  continue_statement.cpp  continue_statement.h  dump_visitor.cpp  dump_visitor.h  empty_statement.cpp  empty_statement.h  enum.cpp  enum.h  enum_statement.cpp  (+140 more)
math/: CMakeLists.txt  bit_vector.h
parse/: CMakeLists.txt  character_properties.h  grammar.txt  parse_error.cpp  parse_error.h  parser.cpp  parser.h  source.cpp  source.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
tests/: test1.hdl
util/: CMakeLists.txt  arena.h  dump_tree.cpp  dump_tree.h  string_pool.h  string_view.h
